# berry-er

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
include/: AdaptiveProblem.h  ArgParser.h  Composition.h  Dynamics.h  HyperRectangle.h  LPSolver.h  MonomialFilter.h  Noise.h  Problem.h  Synthesis.h  Time.h  Tools.h  Transform.h
include/impl/: AdaptiveProblem_impl.hpp  Composition_impl.hpp  Dynamics_impl.hpp  HyperRectangle_impl.hpp  LPSolver_impl.hpp  MonomialFilter_impl.hpp  Noise_impl.hpp  Problem_impl.hpp  Synthesis_impl.hpp  Time_impl.hpp  Tools_impl.hpp  Transform_impl.hpp
scripts/: showBarrier.m  solve.m  visPolynomial2.m  vis_polynomial.m  vizUnsafeSet.m
scripts/julia/: solve.jl
scripts/matlab/: polyval2.m  readMatrixFromFile.m  showBarrier.m  solve.m  visPolynomial.m  visPolynomial2.m  vizInitSet.m  vizUnsafeSet.m
src/: CMakeLists.txt  lin2d.cpp  lower_bound_algo.cpp  lower_bound_test.cpp  opt_test.cpp  rdynNd.cpp  synthesize.cpp  synthesize2d.cpp  synthesize3d.cpp  test.cpp  test1d.cpp  test_d1.cpp  test_d2.cpp  test_pwb_2d.cpp  test_pwb_2d.cpp_IGNORE  try_export_lp.cpp
